Fix su mappa a schermo intero versione mobile Aggiunto accordion con troncatura del testo su "Elementi di interesse" nel dettaglio del singolo luogo, è possibile definire la lunghezza del testo in caratteri nella pgina di configurazione->luoghi Aggiunto download della lista dei firmatari di una circolare (link di download visibile solo se ci sono firmatari) Aggiunto fix su js mappa in caso di coordinate gps mancanti nel dettaglio delsingololuogo Voce "Il Documento" al plurale se esitono più documenti

--- a/assets/css/scuole.css
+++ b/assets/css/scuole.css
@@ -9271,7 +9271,7 @@ svg.leaflet-image-layer.leaflet-interactive path {
       @media (max-width: 767.98px) {
         .section.section-map-wrapper .map-aside {
           width: 100%;
-          height: auto;
+          height: 370px;
           position: relative;
           z-index: 0;
           top: auto;
@@ -12543,3 +12543,25 @@ a.read-more {
       display: block; }
   .footer-social span {
     font-weight: 600; }
+
+
+.card-deck.card_container_accordion {
+    display: block!important;
+}
+
+.card.card_accordion {
+  width: 45%;
+  float: left;
+}
+
+.card .card-body .dsi_more {
+    display: block;
+    text-align: right;
+    font-weight: bold;
+    color: #D1344C;
+    padding: 10px 0 0;
+}
+
+.card-deck .card_accordion .card-body {
+    padding: 24px 24px 20px;
+}
